# HSoM-Exercises

./: CHANGELOG.md  HSoM-Exercises.cabal  README.md
HSoM/Exercises/: Chapter2.hs  Chapter3.hs  Chapter4.hs  Chapter5.hs
