cabal-version:      2.4
name:               HSoM-Exercises
version:            0.1.0.0

synopsis: Exercises and code for Haskell School of Music
description: Code from Haskell School of Music (to exeriment with) along with my solutions to the exercises
author:             Penny Chase
maintainer:         mpchase@mac.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

Library
  exposed-modules: 
    HSoM.Exercises.Chapter2
    HSoM.Exercises.Chapter3
    HSoM.Exercises.Chapter4
  hs-source-dirs: .
  build-depends: 
      base ^>=4.14.3.0
    , containers
    , HSoM
    , Euterpea

executable HSoM-Exercises
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
